--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -4,3 +4,4 @@ convert_srt_to_lrc: ConvertSRTtoLRC
 convert_pdf_to_docx: PDFtoDOCXConverter
 convert_csv_to_json: ConvertCSVtoJSON
 convert_json_to_csv: ConvertJSONtoCSV
+convert_txt_to_csv: ConvertTXTtoCSV
