--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -5,3 +5,4 @@ convert_pdf_to_docx: PDFtoDOCXConverter
 convert_csv_to_json: ConvertCSVtoJSON
 convert_json_to_csv: ConvertJSONtoCSV
 convert_txt_to_csv: ConvertTXTtoCSV
+convert_md_to_html: ConvertMDtoHTML
