Python file added to convert text format to pdf format
Added key in config.yaml

corrected the format and edited features under readme

--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -7,3 +7,4 @@ convert_json_to_csv: ConvertJSONtoCSV
 convert_txt_to_csv: ConvertTXTtoCSV
 convert_md_to_html: ConvertMDtoHTML
 convert_csv_to_xml: ConvertCSVtoXML
+convert_txt_to_pdf: TextToPDFConverter
