added script for pdf to txt conversion

--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -8,3 +8,4 @@ convert_txt_to_csv: ConvertTXTtoCSV
 convert_md_to_html: ConvertMDtoHTML
 convert_csv_to_xml: ConvertCSVtoXML
 convert_txt_to_pdf: TextToPDFConverter
+convert_pdf_to_txt: PDFtoTextConverter
