--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -9,3 +9,4 @@ convert_md_to_html: ConvertMDtoHTML
 convert_csv_to_xml: ConvertCSVtoXML
 convert_txt_to_pdf: TextToPDFConverter
 convert_pdf_to_txt: PDFtoTextConverter
+convert_html_to_md: ConvertHTMLtoMD
