Update config.yml and func_list.txt

--- a/universal_file_converter/_my_utils/config.yml
+++ b/universal_file_converter/_my_utils/config.yml
@@ -11,3 +11,4 @@ convert_txt_to_pdf: TextToPDFConverter
 convert_pdf_to_txt: PDFtoTextConverter
 convert_html_to_md: ConvertHTMLtoMD
 convert_docx_to_pdf: DOCXtoPDFConverter
+convert_image_to_grayscale: ImageToGrayscaleConverter
